hphp/hack/test/typecheck/reactive/test_rxshallow2.php.exp
File "test_rxshallow2.php", line 16, characters 10-16:
Shallow reactive functions cannot call non-reactive functions. (Typing[4218])
  File "test_rxshallow2.php", line 4, characters 10-14:
  This function is normal.
